--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -21,7 +21,7 @@
         blog.id}}>Submit</button>
     </div>
   </form>
-  <h6>Comnents</h6>
+  <h6>Comments</h6>
   <br>
 
   {{#each blog.comments as |comment| }}
@@ -41,7 +41,7 @@
   <p>{{blog.content}} </p>
   <br>
 
-  <h6>Comnents</h6>
+  <h6>Comments</h6>
   <br>
 
   {{#each blog.comments as |comment| }}
